kubernetes/apps/monitoring-system/goldilocks/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
spec:
  hostnames: ["goldilocks.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          namespace: monitoring-system
          port: 80
